docs(03-01): document ISS-005 blocker and update dev release plan
Phase 3 execution blocked by Konflux pipeline failures on index PRs:
- All 6 index PRs fail immediately (~25s) at clone-repository task
- Root cause: Missing serviceAccountName in .tekton files
- Bundle pipeline works (has SA), index pipelines fail (no SA)

Updates:
- ISS-005 added to ISSUES.md with full investigation details
- STATE.md updated with blocker status and session continuity
- ROADMAP.md shows Phase 3 as BLOCKED
- 03-01-PLAN.md updated with skopeo copy step (from release guide)
- /osp:operator-release skill updated with devel image copy step

Blocked PRs: #14207-#14212 (index catalogs for OCP 4.12-4.18)

--- a/.planning/phases/03-dev-release/03-01-PLAN.md
+++ b/.planning/phases/03-dev-release/03-01-PLAN.md
@@ -80,7 +80,7 @@ echo "View at: https://github.com/openshift-pipelines/operator/actions/runs/${RU
 gh run watch ${RUN_ID} --repo openshift-pipelines/operator --exit-status || echo "Check workflow status manually"
 ```
 
-**What this does:** Generates OLM index images for each supported OCP version (4.14, 4.15, 4.16, 4.17, 4.18). The workflow creates PRs that update the index/catalog with the new operator bundle.
+**What this does:** Generates OLM index images for each supported OCP version (4.12, 4.14, 4.15, 4.16, 4.17, 4.18). The workflow creates PRs that update the index/catalog with the new operator bundle.
 
 **What to avoid:** Do NOT trigger with environment="staging" or "production" — this is devel release only.
   </action>
@@ -98,7 +98,7 @@ Output should show `{"status":"completed","conclusion":"success"}`
 </task>
 
 <task type="auto">
-  <name>Task 2: Merge index PRs and verify index pipelines pass</name>
+  <name>Task 2: Merge index PRs and wait for Konflux pipelines</name>
   <files>N/A (GitHub PR operations)</files>
   <action>
 Find and merge the index PRs created by the workflow:
@@ -111,104 +111,146 @@ BRANCH="release-v${VERSION}.x"
 echo "=== Index PRs ==="
 gh pr list --repo openshift-pipelines/operator \
   --base "${BRANCH}" --state open \
-  --json number,title,url | jq '.[] | select(.title | test("index|catalog|fbc"; "i"))'
+  --json number,title,url | jq '.[] | select(.title | test("catalog"; "i"))'
 
-# Merge each index PR
+# Merge each index PR (use --rebase as squash/merge not allowed on this repo)
 for PR in $(gh pr list --repo openshift-pipelines/operator \
   --base "${BRANCH}" --state open \
-  --json number,title | jq -r '.[] | select(.title | test("index|catalog|fbc"; "i")) | .number'); do
+  --json number,title | jq -r '.[] | select(.title | test("catalog"; "i")) | .number'); do
   echo "Merging PR #${PR}..."
-  gh pr merge ${PR} --repo openshift-pipelines/operator --squash --admin || \
+  gh pr merge ${PR} --repo openshift-pipelines/operator --rebase --admin || \
     echo "Failed to merge PR #${PR} - may need manual review"
 done
 ```
 
 **After merge, wait for Konflux on-push pipelines:**
 
+The Konflux pipelines build the index images and push them to:
+- `quay.io/redhat-user-workloads/tekton-ecosystem-tenant/1-15/...`
+
 ```bash
 echo "=== Waiting for index pipelines ==="
 sleep 30
 
-# Check pipeline status for operator repo (includes index builds)
-echo "Checking pipeline status..."
-gh run list --repo openshift-pipelines/operator \
-  --branch "${BRANCH}" --limit 10 \
-  --json name,status,conclusion,createdAt | \
-  jq '.[] | select(.name | test("push|build"; "i"))'
-
-# Wait for in-progress builds to complete (poll for up to 30 min)
-MAX_WAIT=1800
-ELAPSED=0
-INTERVAL=60
-
-while [ $ELAPSED -lt $MAX_WAIT ]; do
-  IN_PROGRESS=$(gh run list --repo openshift-pipelines/operator \
-    --branch "${BRANCH}" --status in_progress \
-    --json databaseId | jq 'length')
-
-  if [ "$IN_PROGRESS" -eq 0 ]; then
-    echo "All pipelines completed!"
-    break
-  fi
-
-  echo "  ${IN_PROGRESS} pipeline(s) still running... (${ELAPSED}s elapsed)"
-  sleep $INTERVAL
-  ELAPSED=$((ELAPSED + INTERVAL))
+# Check PR pipeline status
+for PR in 14207 14208 14209 14210 14211 14212; do
+  echo "PR #${PR}:"
+  gh pr checks ${PR} --repo openshift-pipelines/operator 2>/dev/null | grep -E "Konflux|status" || echo "  No checks"
 done
-
-# Final status check
-echo ""
-echo "=== Final Pipeline Status ==="
-gh run list --repo openshift-pipelines/operator \
-  --branch "${BRANCH}" --limit 5 \
-  --json name,conclusion | jq '.[] | select(.conclusion)'
 ```
 
-**What to avoid:** Do NOT proceed to verification if any pipelines failed — diagnose failures first using `/osp:pr-pipeline-status`.
+**What to avoid:** Do NOT proceed to image copy if any pipelines failed — diagnose failures first.
   </action>
   <verify>
 ```bash
 # Verify no open index PRs remain
 OPEN=$(gh pr list --repo openshift-pipelines/operator \
   --base "release-v1.15.x" --state open \
-  --json title | jq '[.[] | select(.title | test("index|catalog|fbc"; "i"))] | length')
-
-# Verify no failed pipelines
-FAILED=$(gh run list --repo openshift-pipelines/operator \
-  --branch "release-v1.15.x" --limit 5 \
-  --json conclusion | jq '[.[] | select(.conclusion == "failure")] | length')
+  --json title | jq '[.[] | select(.title | test("catalog"; "i"))] | length')
 
 echo "Open index PRs: ${OPEN}"
-echo "Failed pipelines: ${FAILED}"
-[ "$OPEN" -eq 0 ] && [ "$FAILED" -eq 0 ] && echo "✅ All index PRs merged, pipelines passing"
+[ "$OPEN" -eq 0 ] && echo "✅ All index PRs merged"
 ```
   </verify>
-  <done>All index PRs merged, Konflux on-push pipelines passed, no failures</done>
+  <done>All index PRs merged, Konflux on-push pipelines building</done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Verify devel images and generate QE handoff summary</name>
+  <name>Task 3: Copy images from Konflux to devel registry</name>
+  <files>N/A (skopeo operations)</files>
+  <action>
+**CRITICAL STEP:** Once Konflux pipelines are green, copy images from the build registry to the devel registry.
+
+Per the release guide: "Once CI is green, do skopeo copy from `quay.io/redhat-user-workload` to `quay.io/openshift-pipeline`"
+
+```bash
+VERSION="1.15"
+VERSION_DASH="${VERSION//./-}"  # 1-15
+
+# Source: Konflux build registry
+SRC_REGISTRY="quay.io/redhat-user-workloads/tekton-ecosystem-tenant/${VERSION_DASH}"
+
+# Destination: Devel registry
+DST_REGISTRY="quay.io/openshift-pipeline"
+
+echo "=== Copying Index Images to Devel Registry ==="
+echo "Source: ${SRC_REGISTRY}"
+echo "Destination: ${DST_REGISTRY}"
+echo ""
+
+# Copy index images for each OCP version
+for OCP in 4.12 4.14 4.15 4.16 4.17 4.18; do
+  OCP_DASH="${OCP//./-}"  # 4-17
+
+  echo "Copying index v${OCP}..."
+
+  # Get the latest digest from source
+  SRC_IMAGE="${SRC_REGISTRY}/operator-${VERSION_DASH}-index-${OCP_DASH}-rhel8"
+  DST_IMAGE="${DST_REGISTRY}/pipelines-index-rhel8:v${OCP}"
+
+  skopeo copy --all \
+    "docker://${SRC_IMAGE}" \
+    "docker://${DST_IMAGE}" && \
+    echo "  ✅ Copied index v${OCP}" || \
+    echo "  ❌ Failed to copy index v${OCP}"
+done
+
+# Also copy operator bundle
+echo ""
+echo "Copying operator bundle..."
+skopeo copy --all \
+  "docker://${SRC_REGISTRY}/operator-${VERSION_DASH}-bundle-rhel8" \
+  "docker://${DST_REGISTRY}/pipelines-operator-bundle-rhel8" && \
+  echo "  ✅ Copied operator bundle" || \
+  echo "  ❌ Failed to copy operator bundle"
+```
+
+**Authentication required:** You need push access to `quay.io/openshift-pipeline`. Run `podman login quay.io` first if needed.
+
+**What to avoid:** Do NOT copy if Konflux pipelines haven't completed successfully.
+  </action>
+  <verify>
+```bash
+# Verify images exist in devel registry
+REGISTRY="quay.io/openshift-pipeline"
+
+echo "=== Verifying Devel Registry ==="
+for OCP in 4.14 4.15 4.16 4.17 4.18; do
+  DIGEST=$(skopeo inspect --no-tags "docker://${REGISTRY}/pipelines-index-rhel8:v${OCP}" 2>/dev/null | jq -r '.Digest' || echo "")
+  if [ -n "$DIGEST" ]; then
+    echo "✅ Index v${OCP}: ${DIGEST:0:20}..."
+  else
+    echo "❌ Index v${OCP}: NOT FOUND"
+  fi
+done
+```
+  </verify>
+  <done>All index images copied to quay.io/openshift-pipeline devel registry</done>
+</task>
+
+<task type="auto">
+  <name>Task 4: Verify devel images and generate QE handoff summary</name>
   <files>N/A (verification and summary)</files>
   <action>
-Verify index images are available in devel registry:
+Final verification and QE handoff:
 
 ```bash
 REGISTRY="quay.io/openshift-pipeline"
 VERSION="1.15"
 
-echo "=== Verifying Devel Images ==="
+echo "=== Final Verification ==="
 echo "Registry: ${REGISTRY}"
 echo ""
 
 # Check operator bundle
 echo "Operator bundle:"
 skopeo inspect --no-tags "docker://${REGISTRY}/pipelines-operator-bundle-rhel8" 2>/dev/null | \
-  jq '{digest: .Digest, created: .Created}' || echo "Not found or auth required"
+  jq '{digest: .Digest, created: .Created}' || echo "Not found"
 
 # Check index images for each OCP version
 echo ""
 echo "Index images:"
-for OCP in 4.14 4.15 4.16 4.17 4.18; do
+for OCP in 4.12 4.14 4.15 4.16 4.17 4.18; do
   echo ""
   echo "  Index v${OCP}:"
   skopeo inspect --no-tags "docker://${REGISTRY}/pipelines-index-rhel8:v${OCP}" 2>/dev/null | \
@@ -220,17 +262,20 @@ done
 
 The dev release is complete. Generate a summary for QE team with:
 1. Index image locations in quay.io/openshift-pipeline
-2. OCP versions supported (4.14-4.18)
+2. OCP versions supported (4.12, 4.14-4.18)
 3. Installation instructions using CatalogSource
 4. What was fixed in 1.15.4 (CVEs: jwt-go, oauth2, x/crypto)
-
-**What to avoid:** Do NOT notify QE if any images are missing — verify all indexes exist first.
   </action>
   <verify>
 ```bash
-# Quick verification that at least one index exists
-FOUND=$(skopeo inspect --no-tags "docker://quay.io/openshift-pipeline/pipelines-index-rhel8:v4.17" 2>/dev/null | jq '.Digest' || echo "")
-[ -n "$FOUND" ] && echo "✅ Index images verified in devel registry"
+# Quick verification that all indexes exist
+COUNT=0
+for OCP in 4.14 4.15 4.16 4.17 4.18; do
+  FOUND=$(skopeo inspect --no-tags "docker://quay.io/openshift-pipeline/pipelines-index-rhel8:v${OCP}" 2>/dev/null | jq '.Digest' || echo "")
+  [ -n "$FOUND" ] && COUNT=$((COUNT + 1))
+done
+echo "Verified ${COUNT}/5 index images in devel registry"
+[ "$COUNT" -eq 5 ] && echo "✅ All index images verified"
 ```
   </verify>
   <done>All devel images verified, QE handoff summary generated with installation instructions</done>
@@ -243,15 +288,17 @@ Before declaring phase complete:
 - [ ] index-render-template workflow completed successfully
 - [ ] All index PRs merged to release-v1.15.x
 - [ ] Konflux on-push pipelines passed (no failures)
-- [ ] Index images available in quay.io/openshift-pipeline for OCP 4.14-4.18
+- [ ] Images copied from quay.io/redhat-user-workloads to quay.io/openshift-pipeline
+- [ ] Index images available in quay.io/openshift-pipeline for OCP 4.12, 4.14-4.18
 - [ ] QE handoff summary generated
 </verification>
 
 <success_criteria>
 
-- All tasks completed
+- All 4 tasks completed
 - All verification checks pass
 - No pipeline failures
+- Images successfully copied to devel registry
 - Dev release (1.15.4) ready for QE testing
 - Phase 3 complete
 </success_criteria>
